# Smart-Hire-Ai

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 15c44ff778b9_create_initial_schema.py  660c4cb41431_add_recruiter_fields_to_users.py  9df52b48251b_add_resume_parser_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  health.py  resumes.py  root.py
backend/app/core/: __init__.py  config.py  constants.py  lifespan.py  logging.py
backend/app/core/security/: __init__.py  dependencies.py  exceptions.py  jwt.py  password.py  permissions.py  tokens.py
backend/app/db/: __init__.py  base.py  database.py  enums.py  health.py  mixins.py  session.py
backend/app/dependencies/: __init__.py  common.py
backend/app/middleware/: __init__.py  exception_handler.py  process_time.py  request_logging.py
backend/app/models/: __init__.py  resume.py  role.py  user.py  user_role.py
backend/app/repositories/: resume.py  user.py
backend/app/schemas/: auth.py  resume.py
backend/app/services/: auth.py  resume.py
backend/app/utils/: __init__.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_auth_api.py  test_jwt.py  test_password.py  test_resume_api.py
frontend/: .env.example  components.json  index.html  package-lock.json  package.json  (+2 more)
(+64 files in other folders)
